--- a/modal.css
+++ b/modal.css
@@ -1,7 +1,7 @@
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 10; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -17,11 +17,11 @@
     margin: auto;
     padding: 0;
     border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    width: 37%;
+    border-radius: 12px;
+    box-shadow: 25px 20px 25px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
-
 
 /* The Close Button */
 .close {
@@ -40,14 +40,27 @@
 
 .modal-header {
     padding: 2px 16px;
-    background-color: #5cb85c;
+    background-color: #75b86e;
     color: white;
+    border-radius: 10px 10px 0 0;
+    text-align: center;
 }
 
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
+.modal-body {
     padding: 2px 16px;
+}
+
+.buttons {
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-around;
+
+}
+.modal-footer {
+    padding: 10px 16px;
     background-color: #5cb85c;
     color: white;
+    border-radius: 0 0 10px 10px;
 }
